# AI-Engineering-Foundations-Labs

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  course-structure.excalidraw  main.py  pyproject.toml
1-introduction/: 0-development-setup.ipynb  0-uv-check.py  1-first-llm-call.ipynb  2-analyse-aie-job-postings.ipynb  2-first-call-oss-model.ipynb  3-analyse-aie-job-postings.ipynb  3-scrape-job-postings.ipynb  4-classify-job-postings.ipynb  5-responsibilities-of-an-AI-engineer.ipynb  6-required-skills-of-an-AI-engineer.ipynb  7-use-cases-of-an-AI-engineer.ipynb
1-what-is-ai-engineering/: 0-development-setup.ipynb  0-uv-check.py  1-first-llm-call.ipynb  2-first-call-oss-model.ipynb  3-scrape-job-postings.ipynb  4-classify-job-postings.ipynb  5-responsibilities-of-an-AI-engineer.ipynb  6-required-skills-of-an-AI-engineer.ipynb  7-categories-of-AI-apps.ipynb  7-use-cases-of-an-AI-engineer.ipynb
2-project-1-kickoff/: 1-first-workflow.py  digest.html
3-interacting-with-llm-apis/: 1-introduction.ipynb  10-analyzing-files.ipynb  10-creating-images.ipynb  11-extract-text-from-pdf-locally.ipynb  2-model-parameter.ipynb  20-responses-api-vs-chat-completions-api.ipynb  20-temperature.ipynb  3-model-guide.ipynb  4-instruction-input-system-user-prompt.ipynb  5-prompt-engineering.ipynb  6-authority-levels-of-instructions.ipynb  7-structured-output-improvement.ipynb  8-analyzing-files.ipynb  8-analyzing-images.ipynb  9-image-generation.ipynb
4-deployment/: digest-template.html  step_1_scrape.py  step_5_summarize.py  workflow.py
5-deployment/: step_8_render.py
(+199 files in other folders)
