[project]
name = "ai-engineering-foundations-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "openai>=2.29.0",
    "pandas>=2.3.3",
    "python-jobspy>=1.1.82",
    "requests>=2.33.0",
]
